# philips-hue

./: .gitignore  CMakeLists.txt  README
cmake-configs/: UseGSSDPConfig.cmake
include/: Discoverer.hpp
include/philipshue/: Config.hpp  DeviceAddress.hpp  Discoverer.hpp  PhilipsHue.hpp
src/ctlhue/: main.cpp
src/discovery/: CurlInitializer.icpp  Discoverer.cpp
